--- a/validation/src/main/resources/templates/validation/v4/addForm.html
+++ b/validation/src/main/resources/templates/validation/v4/addForm.html
@@ -11,6 +11,7 @@
       .container {
         max-width: 560px;
       }
+
       .field-error {
         border-color: #dc3545;
         color: #dc3545;
@@ -20,9 +21,8 @@
   <body>
     <div class="container">
       <div class="py-5 text-center">
-        <h2 th:text="#{page.updateItem}">상품 수정</h2>
+        <h2 th:text="#{page.addItem}">상품 등록</h2>
       </div>
-
       <form action="item.html" th:action th:object="${item}" method="post">
         <div th:if="${#fields.hasGlobalErrors()}">
           <p
@@ -30,19 +30,8 @@
             th:each="err : ${#fields.globalErrors()}"
             th:text="${err}"
           >
-            글로벌 오류 메시지
+            전체 오류 메시지
           </p>
-        </div>
-
-        <div>
-          <label for="id" th:text="#{label.item.id}">상품 ID</label>
-          <input
-            type="text"
-            id="id"
-            th:field="*{id}"
-            class="form-control"
-            readonly
-          />
         </div>
         <div>
           <label for="itemName" th:text="#{label.item.itemName}">상품명</label>
@@ -80,9 +69,7 @@
           />
           <div class="field-error" th:errors="*{quantity}">수량 오류</div>
         </div>
-
         <hr class="my-4" />
-
         <div class="row">
           <div class="col">
             <button
@@ -96,8 +83,8 @@
           <div class="col">
             <button
               class="w-100 btn btn-secondary btn-lg"
-              onclick="location.href='item.html'"
-              th:onclick="|location.href='@{/validation/v3/items/{itemId}(itemId=${item.id})}'|"
+              onclick="location.href='items.html'"
+              th:onclick="|location.href='@{/validation/v4/items}'|"
               type="button"
               th:text="#{button.cancel}"
             >
